--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
-certifi==2025.1.31
-cffi==1.17.1
-cryptography==44.0.2
-numpy==2.2.3
-openvino==2025.0.0
-openvino-telemetry==2024.1.0
-packaging==24.1
-pycparser==2.22
-PyQt6==6.8.1
-PyQt6-3D==6.8.0
-PyQt6-Charts==6.8.0
-PyQt6-DataVisualization==6.8.0
-PyQt6-NetworkAuth==6.8.0
-PyQt6-WebEngine==6.8.0
-PyQt6_sip==13.10.0
-TBB==0.2
+streamlit
+openai
+crawlee
+playwright
+asyncio
+pandas
+beautifulsoup4
+dotenv
+nest_asyncio
